fix: stats divider wrong position

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -373,12 +373,12 @@ section {
    &::before {
       content: "";
       position: absolute;
-      top: 10%;
-      left: 0;
-      transform: translateY(-50%);
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
       width: 50%;
-      height: 2px;
-      background-color: var(--color-grey-3);
+      height: 1px;
+      background-color: var(--color-grey-5);
    }
 }
 
